[package]
name = "wasmbed-gateway"
version = "0.1.0"
edition = "2021"
authors = ["Wasmbed contributors"]
license = "AGPL-3.0"
description = "Gateway implementation for Wasmbed platform"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# TLS
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# Base64 encoding
base64 = "0.21"

# Crypto
sha2 = "0.10"
ring = "0.17"

# CBOR encoding
ciborium = "0.2"

# Kubernetes client
kube = { version = "1.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }

# Database
sled = "0.34"

# Async traits
async-trait = "0.1"

# Schema generation
schemars = "0.8"

# Wasmbed resources
wasmbed-k8s-resource = { path = "../wasmbed-k8s-resource", features = ["client"] }
wasmbed-protocol = { path = "../wasmbed-protocol" }
wasmbed-tls-utils = { path = "../wasmbed-tls-utils" }
wasmbed-types = { path = "../wasmbed-types" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

# Random number generation
rand = "0.8"

# CBOR serialization
serde_cbor = "0.11"

# Rustls PKI types
rustls-pki-types = "1.0"

# Tokio utilities
tokio-util = "0.7"

# CBOR serialization
minicbor = { version = "1.1", features = ["alloc"] }

[dev-dependencies]
tokio-test = "0.4"